melhoramento do desafio

--- a/ds-17/style.css
+++ b/ds-17/style.css
@@ -2,26 +2,31 @@
 
 .container {
     display: grid;
+    height: 100vh;
+    width: 100vw;
     grid-template: repeat(8, 1fr) / repeat(4, 1fr);
     gap: 5px;
 }
+
+.caixa{
+     background-color: #b4b404;
+    border: 1px solid black;
+    text-align: center;
+}
+
+
 .topo{
     grid-area: 1 / 1 / 3 / -1;
-    background-color: #b4b404;
 }
 .menu{
     grid-area: 3 / 1 / 3 / -1;
-    background-color: #b4b404;
 }
 .principal{
     grid-area: 4 / 1 / 8 / -2;
-    background-color: #b4b404;
 }
 .secundario{
     grid-area: 4 / -2 / 8 / -1;
-    background-color: #b4b404;
 }
 .rodape{
     grid-area: 8 / 1 / 8 / -1;
-    background-color: #b4b404;
 }
